# chrono

./: .codeclimate.yml  .env-sample  .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yml  production.yml
server/: Dockerfile  Pipfile  db.sqlite3  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  schema.graphql  setup.cfg
server/apps/export/: models.py  serializers.py  views.py
server/apps/jwt_auth/: authentication.py
server/apps/project/: factories.py  filters.py  schema.py  views.py
server/apps/task/: enums.py  factories.py  filters.py  schema.py  views.py
server/apps/user/: factories.py  filters.py  models.py  mutations.py  serializers.py
server/apps/user_group/: factories.py  filters.py  models.py  schema.py  serializers.py
server/apps/user_resource/: serializers.py
server/chrono/: exception_handler.py  schema.py  serializers.py  settings.py  test_case.py  urls.py  wsgi.py
server/deploy/configs/: uwsgi.ini
server/deploy/scripts/: run_develop.sh  run_prod.sh
server/export/: exporters.py  serializers.py  utils.py  views.py
server/export/migrations/: 0001_initial.py
server/jwt_auth/: serializers.py  token.py
server/project/: admin.py  filters.py  models.py  serializers.py  views.py
server/project/migrations/: 0002_phase.py  (+3 more)
server/task/: admin.py  filters.py  models.py  schema.py  serializers.py  views.py
server/user/: schema.py  serializers.py  views.py
server/user_group/: serializers.py  views.py
server/user_resource/: serializers.py
server/utils/: common.py  filters.py  mutation.py
(+314 files in other folders)
